# MEASURE

./: README.md  evaluation_pipeline.ipynb  main.py  pyproject.toml  vlms_evaluation.ipynb
inferences/: RChilli_analysis.ipynb  aws_textract_inference.py  liquidai_inference.ipynb  ministral_3_8b_1st_stage.py  ministral_3_8b_2nd_stage.py  vlms_api_inference.ipynb
utils/: df_to_structure_json.py  helpers.py  inferences.py  layout_metrics.py  ocr_engines.py  ocr_metrics.py  ocr_output_norma.py  ocr_to_labelstudio.py  pydantic_schema.py  reading_order_metrics.py  suryaOCR.sh
