[project]
name = "measure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.5",
    "dotenv>=0.9.9",
    "easyocr>=1.7.2",
    "google-genai>=1.75.0",
    "ipykernel>=7.2.0",
    "jiwer>=4.0.0",
    "lxml>=6.1.0",
    "mistralai==1.5.0",
    "ollama>=0.6.2",
    "openai>=2.35.0",
    "pandas>=3.0.2",
    "pdf2image>=1.17.0",
    "pydantic>=2.13.4",
    "pytesseract>=0.3.13",
    "sacrebleu>=2.6.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.1",
    "tqdm>=4.67.3",
    "transformers>=5.8.0",
]
